test and builder